--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+src/main/java/com/github/yoruhinda/tavernabot/utils
+src/main/java/com/github/yoruhinda/tavernabot/utils/Config.java
