--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,4 @@ build/
 ### Mac OS ###
 .DS_Store
 
-src/main/java/com/github/yoruhinda/tavernabot/utils
-src/main/java/com/github/yoruhinda/tavernabot/utils/Config.java
+.env
